Suprisingly more bug fixes and more UI Updates

--- a/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
+++ b/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
@@ -13,7 +13,7 @@
     <div class="container"><a class="navbar-brand js-scroll-trigger" (click)="goBackToVisualPage()">The Music Visualizer</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" routerLink="../AboutPage">About Us</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" routerLink="AboutPage">About Us</a></li>
           </ul>
       </div>
     </div>
