--- a/music-visualizer/src/app/pages/About-Page/about-page.component.html
+++ b/music-visualizer/src/app/pages/About-Page/about-page.component.html
@@ -9,6 +9,7 @@
 </head>
 
 <body id="page-top">
+  <!--Top nav bar-->
 <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
   <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">The Music Visualizer</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-align-justify"></i></button>
   </div>
@@ -21,6 +22,7 @@
         <hr />
       </div>
     </div>
+    <!--Credits list-->
     <div class="col-lg-8 mx-auto">
       <p>Credits:</p>
       <p>
