--- a/music-visualizer/src/app/pages/Home-Page/home-page.component.html
+++ b/music-visualizer/src/app/pages/Home-Page/home-page.component.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-  <title>Home - The Music Visualizer</title>
+  <title name='title'>Home - The Music Visualizer</title>
 </head>
 
 <body id="page-top">
